# pymakefile

./: LICENSE  README.md  pyproject.toml
pymakefile/: pymakefile.py
