[tool.poetry]
name = "pymakefile"
version = "0.1.0"
description = "Manage your Makefiles from python"
authors = ["William <macwilliamdlc@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/willbackslash/pymakefile"
homepage = "https://github.com/willbackslash/pymakefile"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "pymakefile" },
    { include = "pymakefile/**/*.py" },
]

[tool.poetry.scripts]
pymake = "pymakefile.pymakefile:main"